--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -7,18 +7,22 @@
 	<meta name="viewport" content="width=device-width">
 	<link href="http://twitter.github.io/bootstrap/assets/css/bootstrap.css" rel="stylesheet">
 	<link href="http://twitter.github.io/bootstrap/assets/css/bootstrap-responsive.css" rel="stylesheet">
-	<link rel="stylesheet" href="/css/syntax.css">
-	<link rel="stylesheet" href="/css/main.css">
+	<link rel="stylesheet" href="/site/css/syntax.css">
+	<link rel="stylesheet" href="/site/css/main.css">
 </head>
 <body data-spy="scroll">
 
-
-
+<div class="content">
 {{ content }}
+</div>
 
 
 <footer>
-	This is footer.
+	<div class="container">
+		<small>
+			&copy; 2013 Markdown 2
+		</small>
+	</div>
 </footer>
 
 <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
