--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -7,8 +7,8 @@
 	<meta name="viewport" content="width=device-width">
 	<link href="http://twitter.github.io/bootstrap/assets/css/bootstrap.css" rel="stylesheet">
 	<link href="http://twitter.github.io/bootstrap/assets/css/bootstrap-responsive.css" rel="stylesheet">
-	<link rel="stylesheet" href="/site/css/syntax.css">
-	<link rel="stylesheet" href="/site/css/main.css">
+	<link rel="stylesheet" href="/css/syntax.css">
+	<link rel="stylesheet" href="/css/main.css">
 </head>
 <body data-spy="scroll">
 
